# RailFlux

./: .gitignore  CMakeLists.txt  Main.qml  Readme.md  canvas.py  firebase_setup.py  firebase_test.py  main.cpp  main.py  main.spec  requirements.txt  resources.qrc  settings.py  text_config.txt  text_renderer.py  timer.py  track.py  train.py  train_detection_icon.py
components/: AdvanceStarterSignal.qml  BasicSignal.qml  GridCanvas.qml  HomeSignal.qml  OuterSignal.qml  PointMachine.qml  SignalContextMenu.qml  StarterSignal.qml  ToastNotification.qml  TrackSegment.qml
data/: StationData.js  signal_interlocking_rules.json
database/: DatabaseInitializer.cpp  DatabaseInitializer.h  DatabaseManager.cpp  DatabaseManager.h  databaseinitializer.cpp  databaseinitializer.h  databasemanager.cpp  databasemanager.h
interlocking/: InterlockingRuleEngine.cpp  InterlockingRuleEngine.h  InterlockingService.cpp  InterlockingService.h  PointMachineBranch.cpp  PointMachineBranch.h  SignalBranch.cpp  SignalBranch.h  SignalInterlockingConfig.cpp  SignalInterlockingConfig.h  SignalInterlockingEngine.cpp  SignalInterlockingEngine.h  SignalInterlockingTypes.cpp  SignalInterlockingTypes.h  SignalRule.h  TrackCircuitBranch.cpp  TrackCircuitBranch.h  signalbranch.cpp  signalbranch.h
layouts/: StationLayout.qml
resources/data/: signal_interlocking_rules.json
sql/: sql_coomands_railflux.sql
